--- a/index.html
+++ b/index.html
@@ -7,9 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Gallery</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 
 <body>
+    <header>
+        <div class="header-container">
+        <div class="image"></div>
+            <div class="head">
+                <h1 id="heading">MODERN<br>ART GALLERY</h1>
+            
+                <p id="para-1">The arts in the collection of the Modern Art Gallery all started from a 
+                spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
+                <a href="index2.html" target="_blank">
+                    <div class="location">
+                        <button id="location">OUR LOCATION</button>
+                        <div class="loc-box"><img src="./assets/icon-arrow-right.svg" alt=""></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="space"></div>
+        <div class="your-day">
+            <h1 id="your-day">YOUR DAY<br>AT THE GALLERY</h1>
+            <p id="your-para">Wander through our distinct collections and find new 
+                insights about our artists. Dive into the details of their creative process.</p>
+        </div>
+        <div class="space-2"></div>
+        <div class="inspired">
+            <div class="ins-text">
+            <h1 id="come-inspired">COME & BE<br>INSPIRED</h1>
+            <p id="inspired-para">We're excited to welcome you to our gallery and see how our collections influence you.</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="space-3"></div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="gallery-text">
+                <h1 id="gallery">MODERN<br>ART GALLERY</h1>
+                <p id="gallery-para">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+            </div>
+
+        </div>
+    </footer>
 
 
 </body>
