--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
                 insights about our artists. Dive into the details of their creative process.</p>
         </div>
         <div class="space-2"></div>
-        <div class="inspired">
+
+        <div class="ins-move">
+        
+            <div class="inspired">
             <div class="ins-text">
             <h1 id="come-inspired">COME & BE<br>INSPIRED</h1>
             <p id="inspired-para">We're excited to welcome you to our gallery and see how our collections influence you.</p>
             </div>
+        </div>
+        
         </div>
     </section>
 
@@ -53,8 +58,12 @@
             <div class="gallery-text">
                 <h1 id="gallery">MODERN<br>ART GALLERY</h1>
                 <p id="gallery-para">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+                <div class="icon">
+                    <img id='facebook' src="./assets/icon-facebook.svg" alt="icon-facebook">
+                    <img id="instagram" src="./assets/icon-instagram.svg" alt="icon-instagram">
+                    <img id="twitter" src="./assets/icon-twitter.svg" alt="icon-twitter">
+                </div>
             </div>
-
         </div>
     </footer>
 
