--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
-    ukhkh
+    <header>
+        <div class="map">
+            <div class="button">
+                <div class="loc-box"><img src="./assets/icon-arrow-left.svg" alt="Home"></div>
+                <button id="home">BACK TO HOME</button>
+            </div>
+        </div>
+    </header>
+
+    <section>
+
+        
+        <div class="loc-container">
+            <div class="loc-text">
+                <h1 id="loc-bold">OUR LOCATION</h1>
+                <h2 id="loc-mid">99 KING STREET</h2>
+                <p id="loc1">Newport<br>RI 02840<br>United States of America</p>
+                <p id="loc-para">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="gallery-text">
+                <h1 id="gallery">MODERN<br>ART GALLERY</h1>
+                <p id="gallery-para">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+                <div class="icon">
+                    <img id='facebook' src="./assets/icon-facebook.svg" alt="icon-facebook">
+                    <img id="instagram" src="./assets/icon-instagram.svg" alt="icon-instagram">
+                    <img id="twitter" src="./assets/icon-twitter.svg" alt="icon-twitter">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
