--- a/index2.html
+++ b/index2.html
@@ -12,10 +12,12 @@
 <body>
     <header>
         <div class="map">
+            <a href="index.html">
             <div class="button">
                 <div class="loc-box"><img src="./assets/icon-arrow-left.svg" alt="Home"></div>
                 <button id="home">BACK TO HOME</button>
             </div>
+            </a>
         </div>
     </header>
 
