--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Our Location</title>
     <link rel="stylesheet" href="index2.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&display=swap">
@@ -27,9 +27,11 @@
         <div class="loc-container">
             <div class="loc-text">
                 <h1 id="loc-bold">OUR LOCATION</h1>
-                <h2 id="loc-mid">99 KING STREET</h2>
-                <p id="loc1">Newport<br>RI 02840<br>United States of America</p>
-                <p id="loc-para">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+                <div class="loc-pat">
+                    <h2 id="loc-mid">99 KING STREET</h2>
+                    <p id="loc1">Newport<br>RI 02840<br>United States of America</p>
+                    <p id="loc-para">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+                </div>
             </div>
         </div>
 
