--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 <body>
     <header>
         <div class="header-container">
+            <div class="black-shape"></div>
             <div class="image"></div>
             <div class="head">
                 <h1 id="heading">MODERN<br>ART GALLERY</h1>
 
                 <p id="para-1">The arts in the collection of the Modern Art Gallery all started from a
                     spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
+
                 <a href="index2.html">
-                    <div class="location">
-                        <button id="location">OUR LOCATION</button>
-                        <div class="loc-box"><img src="./assets/icon-arrow-right.svg" alt=""></div>
-                    </div>
+                    <button class="location">OUR LOCATION</button>
+                    <div class="loc-box"><img src="./assets/icon-arrow-right.svg" alt=""></div>
                 </a>
+
             </div>
         </div>
     </header>
@@ -35,7 +36,7 @@
     <section>
         <div class="space"></div>
         <div class="your-day">
-            <h1 id="your-day">YOUR DAY<br>AT THE GALLERY</h1>
+            <h1 id="your-day">YOUR DAY AT<br>THE GALLERY</h1>
             <p id="your-para">Wander through our distinct collections and find new
                 insights about our artists. Dive into the details of their creative process.</p>
         </div>
