--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="head">
                 
                 <h1 id="heading">MODER<span class="N">N</span><br>ART GAL<span class="LERY">LERY</span></h1>
-
+                <img class="gale" src="./assets/desktop/gale.svg" >
                 <p id="para-1">The arts in the collection of the Modern Art Gallery all started from a
                     spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
 
