--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 </head>
 
 <body>
+    <!-- containing the old lady image and nav bar-->
     <header>
         <div class="header-container">
+
             <div class="black-shape"></div>
             <div class="image"></div>
             <div class="head">
-                
+
                 <h1 id="heading">MODER<span class="N">N</span><br>ART GAL<span class="LERY">LERY</span></h1>
-                <img class="gale" src="./assets/desktop/gale.svg" >
+                <img class="gale" src="./assets/desktop/gale.svg">
                 <p id="para-1">The arts in the collection of the Modern Art Gallery all started from a
                     spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
 
@@ -34,31 +36,51 @@
         </div>
     </header>
 
+    <!-- containing the Body images and text-->
     <section>
-        <div class="space"></div>
-        <div class="your-day">
-            <h1 id="your-day">YOUR DAY AT THE GALLERY</h1>
-            <p id="your-para">Wander through our distinct collections and find new
-                insights about our artists. Dive into the details of their creative process.</p>
+
+        <div class="your">
+            <div class="your-day">
+                <h1 id="your-day">YOUR DAY AT THE GALLERY</h1>
+                <p id="your-para">Wander through our distinct collections and find new
+                    insights about our artists. Dive into the details of their creative process.</p>
+            </div>
+
+            <div class="in-images1"><img id="grid1" src="./assets/desktop/image-grid-1@2x.jpg" alt="image-grid-1"></div>
         </div>
-        <div class="space-2"></div>
 
-        <div class="ins-move">
-            <div class="box"></div>
-            <div class="inspired">
+        <div class="your2">
 
-                <div class="ins-text">
-                    <h1 id="come-inspired">COME & BE<br>INSPIRED</h1>
-                    <p id="inspired-para">We're excited to welcome you to our gallery and see how our collections
-                        influence you.</p>
-                </div>
+            <div class="in-images2">
+                <img id="grid2" src="./assets/desktop/image-grid-2@2x.jpg" alt="image-grid-2">
+            </div>
+            <div class="in-images3">
+                <img id="grid3" src="./assets/desktop/image-grid-3@2x.jpg" alt="image-grid-3">
             </div>
 
         </div>
+
+
+            <div class="ins-move">
+
+                <div class="box"></div>
+                <div class="inspired">
+
+                    <div class="ins-text">
+                        <h1 id="come-inspired">COME & BE<br>INSPIRED</h1>
+                        <p id="inspired-para">We're excited to welcome you to our gallery and see how our collections
+                            influence you.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        
     </section>
 
     <div class="space-3"></div>
 
+    <!--containing the footer text and social media icons-->
     <footer>
         <div class="footer-container">
             <div class="gallery-text">
