--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                     <img id="gale" src="./assets/desktop/gale.svg" alt="gale">
                 </div>
 
+
+
                 <div class="loc-parra">
+
+                    <div class="title"><span id="title">MODERN <br> ART GALLERY</span></div>
 
                     <div class="para">
                         <p id="para-1">The arts in the collection of the Modern Art Gallery all started from a
@@ -57,6 +61,7 @@
    
     <div class="sec-foot">
     <!-- containing the Body images and text-->
+    <div class="section">
     <section>
 
         <div class="your">
@@ -70,6 +75,9 @@
             <div class="in-images1">
                 <img id="grid1" src="./assets/desktop/image-grid-1@2x.jpg" alt="image-grid-1">
             </div>
+            <div class="in-images1-1">
+                <img id="grid1-1" src="./assets/tablet/image-grid-1@2x.jpg" alt="image-grid-1">
+            </div>
 
         </div>
 
@@ -81,10 +89,18 @@
                     <img id="grid2" src="./assets/desktop/image-grid-2@2x.jpg" alt="image-grid-2">
                 </div>
 
+                <div class="in-images2-1">
+                    <img id="grid2-1" src="./assets/tablet/image-grid-2@2x.jpg" alt="image-grid-2">
+                </div>
+
             <div class="your2">
 
                 <div class="in-images3">
                     <img id="grid3"  src="./assets/desktop/image-grid-3@2x.jpg" alt="image-grid-3">
+                </div>
+
+                <div class="in-images3-1">
+                    <img id="grid3-1"  src="./assets/tablet/image-grid-3@2x.jpg" alt="image-grid-3">
                 </div>
 
                 <div class="ins-move">
@@ -106,6 +122,7 @@
         
         
     </section>
+</div>
 
 
     <!--containing the footer text and social media icons-->
