--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <div class="hero">
                     <img id="hero" src="./assets/desktop/image-hero@2x.jpg" alt="hero-image"> 
                 </div>
+
+                <div class="hero-1">
+                    <img id="hero-1" src="./assets/mobile/image-hero@2x.jpg" alt="hero-image"> 
+                </div>
             </div>
 
             <div class="head">
