--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="your">
 
             <div class="your-day">
-                <h1 id="your-day">YOUR DAY AT THE GALLERY</h1>
+                <h1 id="your-day"><span id="yourday">YOUR DAY</span> <span id="nextline">AT THE GALLERY</span></h1>
                 <p id="your-para">Wander through our distinct collections and find new
                     insights about our artists. Dive into the details of their creative process.</p>
             </div>
@@ -81,6 +81,10 @@
             </div>
             <div class="in-images1-1">
                 <img id="grid1-1" src="./assets/tablet/image-grid-1@2x.jpg" alt="image-grid-1">
+            </div>
+
+            <div class="in-images1-2">
+                <img id="grid1-2" src="./assets/mobile/image-grid-1@2x.jpg" alt="image-grid-1">
             </div>
 
         </div>
@@ -97,6 +101,10 @@
                     <img id="grid2-1" src="./assets/tablet/image-grid-2@2x.jpg" alt="image-grid-2">
                 </div>
 
+                <div class="in-images2-2">
+                    <img id="grid2-2" src="./assets/mobile/image-grid-2@2x.jpg" alt="image-grid-2">
+                </div>
+
             <div class="your2">
 
                 <div class="in-images3">
@@ -106,6 +114,11 @@
                 <div class="in-images3-1">
                     <img id="grid3-1"  src="./assets/tablet/image-grid-3@2x.jpg" alt="image-grid-3">
                 </div>
+
+                <div class="in-images3-2">
+                    <img id="grid3-2"  src="./assets/mobile/image-grid-3@2x.jpg" alt="image-grid-3">
+                </div>
+
 
                 <div class="ins-move">
 
